service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-servicegoapi
spec:
  selector:
    app: backendgoapi
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32011
      protocol: TCP
  type: NodePort
