ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingressgoapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: backend.archse.eng.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-servicegoapi
                port:
                  name: http
